// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickerInput Body Open/Close should open body 1`] = `
<body>
  <div>
    <div
      class="container uui-input-box root uui-picker_toggler uui-size-36 uui-control-mode-form"
    >
      <div
        class="body"
      >
        <input
          aria-haspopup="dialog"
          autocomplete="no"
          class="uui-input singleInput cursorText -clickable"
          dir="ltr"
          placeholder="Please select "
          tabindex="0"
          type="search"
          value=""
        />
      </div>
      <div
        class="uui-picker_toggler-actions"
      >
        <button
          class="uui-button-box uui-enabled -clickable container uui-control_icon root uui-icon-dropdown -focusable"
          tabindex="0"
          type="button"
        >
          <div
            class="container uui-icon uui-enabled"
          >
            <svg
              class="flipY"
            />
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    aria-hidden="false"
    class="uui-popper"
    data-placement="top-start"
    role="dialog"
    style="position: fixed; top: -6px; left: 0px; z-index: 2000;"
  >
    <div
      class="uui-dropdown-body -lock-focus root container uui-picker_input-body-wrapper container"
      style="min-width: 360px; max-width: 360px;"
      tabindex="-1"
    >
      <div
        class="root uui-flex-row uui-picker_input-body uui-size-36"
        style="max-height: 300px;"
        tabindex="-1"
      >
        <div
          class="root scrollContainer uui-scroll-bars uui-line-bottom"
          data-overlayscrollbars="host"
          data-overlayscrollbars-initialize=""
        >
          <div
            class="os-size-observer"
          >
            <div
              class="os-size-observer-listener"
            />
          </div>
          <div
            class=""
            data-overlayscrollbars-padding=""
            style="margin-right: 0px; margin-bottom: 0px; margin-left: 0px; top: 0px; left: 0px; width: calc(100% + 0px);"
          >
            <div
              aria-orientation="vertical"
              class="viewport"
              data-overlayscrollbars-contents=""
              data-overlayscrollbars-viewport="overflowXHidden overflowYHidden"
              style="padding: 0px 0px 0px 0px;"
              tabindex="0"
            >
              <div
                class="listContainer"
                style="min-height: 2px;"
              >
                <div
                  role="listbox"
                  style="margin-top: 0px;"
                >
                  <div
                    aria-posinset="1"
                    aria-selected="false"
                    class="pickerRow uui-picker_input-row uui-size-36 align-widgets-top uui-focus -clickable"
                    id="2"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="flexCell rowContent"
                      style="min-width: 0; flex-grow: 1; flex-basis: 0px;"
                    >
                      <div
                        class="contentWrapper"
                      >
                        <div
                          class="flexCell root uui-picker_input-item uui-typography"
                          style="min-width: 0; flex-basis: auto;"
                        >
                          <div
                            class="root uui-flex-row columnGap uui-size-36"
                            style="--uui-picker_item-vertical-padding: 9px;"
                          >
                            <div
                              class="flexCell"
                              style="min-width: 0; flex-basis: auto;"
                            >
                              <div
                                class="title uui-size-36"
                              >
                                Elementary
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    aria-posinset="2"
                    aria-selected="false"
                    class="pickerRow uui-picker_input-row uui-size-36 align-widgets-top -clickable"
                    id="3"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="flexCell rowContent"
                      style="min-width: 0; flex-grow: 1; flex-basis: 0px;"
                    >
                      <div
                        class="contentWrapper"
                      >
                        <div
                          class="flexCell root uui-picker_input-item uui-typography"
                          style="min-width: 0; flex-basis: auto;"
                        >
                          <div
                            class="root uui-flex-row columnGap uui-size-36"
                            style="--uui-picker_item-vertical-padding: 9px;"
                          >
                            <div
                              class="flexCell"
                              style="min-width: 0; flex-basis: auto;"
                            >
                              <div
                                class="title uui-size-36"
                              >
                                Elementary+
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-busy="false"
                aria-label=""
                aria-live="polite"
                class="container uui-blocker-container root"
                role="status"
              />
            </div>
          </div>
          <div
            class="os-scrollbar os-scrollbar-horizontal os-theme-none uui-scroll-bars os-scrollbar-auto-hide os-scrollbar-handle-interactive os-scrollbar-cornerless os-scrollbar-unusable"
            style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;"
          >
            <div
              class="os-scrollbar-track"
            >
              <div
                class="os-scrollbar-handle"
              />
            </div>
          </div>
          <div
            class="os-scrollbar os-scrollbar-vertical os-theme-none uui-scroll-bars os-scrollbar-auto-hide os-scrollbar-handle-interactive os-scrollbar-cornerless os-scrollbar-unusable"
            style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;"
          >
            <div
              class="os-scrollbar-track"
            >
              <div
                class="os-scrollbar-handle"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="root uui-flex-row uui-picker_input-footer uui-size-36"
      >
        <div
          class="flexSpacer"
        />
        <div
          class="flexCell"
          style="min-width: 0; flex-basis: auto; align-self: center;"
        >
          <button
            aria-disabled="true"
            class="uui-button-box uui-disabled uui-link_button root uui-size-36 uui-no-left-icon uui-no-right-icon uui-color-primary"
            tabindex="-1"
            type="button"
          >
            <div
              class="uui-caption uui-link-button-weight-semibold"
            >
              CLEAR
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`PickerInput Rendering should render with maximum props 1`] = `
<DocumentFragment>
  <div
    class="container uui-input-box uui-has-value root uui-picker_toggler uui-size-48 uui-control-mode-form"
    tabindex="0"
  >
    <div
      class="body uui-picker_toggler-multiline"
    >
      <span
        class="uui-button-box uui-enabled root uui-size-36 uui-color-neutral uui-fill-solid uui-tag"
        role="option"
        tabindex="-1"
      >
        <div
          class="uui-caption"
        >
          A1
        </div>
        <button
          aria-label="Remove tag"
          class="uui-button-box uui-enabled -clickable container uui-control_icon root uui-icon-cancel -focusable"
          tabindex="0"
          type="button"
        >
          <div
            class="container uui-icon uui-enabled"
          >
            <svg
              class=""
            />
          </div>
        </button>
      </span>
      <span
        class="uui-button-box uui-enabled root uui-size-36 uui-color-neutral uui-fill-solid uui-tag"
        role="option"
        tabindex="-1"
      >
        <div
          class="uui-caption"
        >
          A1+
        </div>
        <button
          aria-label="Remove tag"
          class="uui-button-box uui-enabled -clickable container uui-control_icon root uui-icon-cancel -focusable"
          tabindex="0"
          type="button"
        >
          <div
            class="container uui-icon uui-enabled"
          >
            <svg
              class=""
            />
          </div>
        </button>
      </span>
    </div>
    <div
      class="uui-picker_toggler-actions"
    >
      <button
        aria-label="Clear input"
        class="uui-button-box uui-enabled -clickable container uui-control_icon root uui-icon-cancel -focusable"
        tabindex="0"
        type="button"
      >
        <div
          class="container uui-icon uui-enabled"
        >
          <svg
            class=""
          />
        </div>
      </button>
      <button
        class="uui-button-box uui-enabled -clickable container uui-control_icon root uui-icon-dropdown -focusable"
        tabindex="0"
        type="button"
      >
        <div
          class="container uui-icon uui-enabled"
        >
          <svg
            class=""
          />
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PickerInput Rendering should render with minimum props 1`] = `
<DocumentFragment>
  <div
    class="container uui-input-box root uui-picker_toggler uui-size-36 uui-control-mode-form"
  >
    <div
      class="body"
    >
      <input
        aria-haspopup="dialog"
        autocomplete="no"
        class="uui-input singleInput cursorText -clickable"
        dir="ltr"
        placeholder="Please select "
        tabindex="0"
        type="search"
        value=""
      />
    </div>
    <div
      class="uui-picker_toggler-actions"
    >
      <button
        class="uui-button-box uui-enabled -clickable container uui-control_icon root uui-icon-dropdown -focusable"
        tabindex="0"
        type="button"
      >
        <div
          class="container uui-icon uui-enabled"
        >
          <svg
            class=""
          />
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
